config/networkpolicy/workload-net-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openfaas-fn-egress
  namespace: openfaas-fn
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      com.openfaas.profile: ofc-workload
  egress:
  - to:
    - ipBlock:
       cidr: 0.0.0.0/0
       except:
       - 10.0.0.0/8
       - 172.16.0.0/12
       - 192.168.0.0/16
